--- a/css/styles.css
+++ b/css/styles.css
@@ -326,9 +326,7 @@ address {
   margin-top: 8px;
   transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
-.team-social-link:hover {
-  background-color: #404bbf;
-}
+.team-social-link:hover,
 .team-social-link:focus {
   background-color: #404bbf;
 }
@@ -375,7 +373,7 @@ address {
   position: relative;
   overflow: hidden;
 }
-.overlay-relativ:hover .overlay-text {
+.portfolio-item:hover .overlay-text {
   transform: translateY(0%);
 }
 
@@ -438,6 +436,7 @@ address {
   line-height: 1.17;
   letter-spacing: 0.03em;
   text-transform: uppercase;
+  text-decoration: none;
   margin-bottom: 16px;
   display: inline-block;
 }
@@ -450,9 +449,10 @@ address {
   font-weight: 400;
   line-height: 1.5;
   letter-spacing: 0.02em;
-  width: 264px;
+  max-width: 264px;
 }
 .footer-link {
+  margin-right: 120px;
 }
 .footer-social-text {
   color: var(--WHITE, #fff);
@@ -483,10 +483,73 @@ address {
   background-color: #4d5ae5;
   transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
-.footer-social-link:hover {
-  background-color: #31d0aa;
-}
+.footer-social-link:hover,
 .footer-social-link:focus {
   background-color: #31d0aa;
+}
+.footer-form {
+  width: 453px;
+  height: 80px;
+  display: block;
+}
+.footer-form-text {
+  color: var(--WHITE, #fff);
+  font-size: 16px;
+  font-weight: 500;
+  line-height: 1.5;
+  letter-spacing: 0.02em;
+  margin-bottom: 16px;
+}
+.footer-form-box {
+  width: 100%;
+  height: 40px;
+  background-color: var(--NAVY-BLUE, #2e2f42);
+  display: flex;
+  gap: 24px;
+  align-items: center;
+}
+.footer-form-label {
+}
+.footer-form-in {
+  width: 100%;
+  height: 40px;
+  color: var(--WHITE, #fff);
+  font-size: 12px;
+  font-weight: 400;
+  line-height: 2;
+  letter-spacing: 0.04em;
+  margin-right: 24px;
+  padding: 8px 16px;
+  background-color: var(--NAVY-BLUE, #2e2f42);
+  border-radius: 4px;
+  border: 1px solid var(--WHITE, #fff);
+  box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.15);
+}
+.footer-form-btn-link {
+}
+.footer-form-btn {
+  color: var(--WHITE, #fff);
+  text-align: center;
+  font-size: 16px;
+  font-weight: 500;
+  line-height: 2.5;
+  letter-spacing: 0.04em;
+  border-radius: 4px;
+  background-color: var(--IRIS, #4d5ae5);
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  border: none;
+  height: 40px;
+  min-width: 165px;
+}
+.footer-form-btn:hover,
+.footer-form-btn:focus {
+  background-color: var(--OCEAN, #404bbf);
+}
+.footer-form-icon {
+  margin-left: 16px;
+  fill: #ffffff;
 }
 /*? ============================================================ */
