--- a/css/styles.css
+++ b/css/styles.css
@@ -520,10 +520,11 @@ address {
   letter-spacing: 0.04em;
   margin-right: 24px;
   padding: 8px 16px;
-  background-color: var(--NAVY-BLUE, #2e2f42);
+  background-color: transparent;
   border-radius: 4px;
   border: 1px solid var(--WHITE, #fff);
   box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.15);
+  width: 264px;
 }
 .footer-form-btn-link {
 }
@@ -532,14 +533,14 @@ address {
   text-align: center;
   font-size: 16px;
   font-weight: 500;
-  line-height: 2.5;
+  line-height: 1.5;
   letter-spacing: 0.04em;
   border-radius: 4px;
   background-color: var(--IRIS, #4d5ae5);
   display: flex;
   justify-content: center;
   align-items: center;
-  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  font-family: "Roboto", sans-serif;
   border: none;
   height: 40px;
   min-width: 165px;
