--- a/css/styles.css
+++ b/css/styles.css
@@ -563,11 +563,13 @@ address {
   background-color: rgba(46, 47, 66, 0.4);
   transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1),
     visibility 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  padding: 72px 24px 24px 24px;
 }
+
 .modal-window {
   position: absolute;
   top: 50%;
-  left: 100%;
+  left: 50%;
   transform: translate(-50%, -50%) scale(1);
   width: 408px;
   min-height: 584px;
@@ -594,12 +596,30 @@ address {
   transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1),
     border 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
-.modal-window-btn:hover,
+
+.modal-window-btn:hover {
+  background-color: #404bbf;
+  border: none;
+}
 .modal-window-btn:focus {
   background-color: #404bbf;
   border: none;
 }
 .modal-window-btn-icon {
   transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+.modal-window-btn-icon:hover {
+  fill: #ffffff;
+}
+.modal-window-btn-icon:focus {
+  fill: #ffffff;
+}
+.modal-text {
+  font-weight: 500;
+  font-size: 1.5;
+  text-align: center;
+  letter-spacing: 0.02em;
+  color: #2e2f42;
+  margin-bottom: 16px;
 }
 /*! ============================================================ */
