--- a/css/styles.css
+++ b/css/styles.css
@@ -563,7 +563,6 @@ address {
   background-color: rgba(46, 47, 66, 0.4);
   transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1),
     visibility 250ms cubic-bezier(0.4, 0, 0.2, 1);
-  padding: 72px 24px 24px 24px;
 }
 
 .modal-window {
@@ -578,6 +577,7 @@ address {
     0px 2px 1px rgba(0, 0, 0, 0.2);
   border-radius: 4px;
   transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  padding: 72px 24px 24px 24px;
 }
 .modal-window-btn {
   position: absolute;
@@ -596,7 +596,6 @@ address {
   transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1),
     border 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
-
 .modal-window-btn:hover {
   background-color: #404bbf;
   border: none;
@@ -608,10 +607,10 @@ address {
 .modal-window-btn-icon {
   transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
-.modal-window-btn-icon:hover {
+.modal-window-btn:hover .modal-window-btn-icon {
   fill: #ffffff;
 }
-.modal-window-btn-icon:focus {
+.modal-window-btn:focus .modal-window-btn-icon {
   fill: #ffffff;
 }
 .modal-text {
@@ -621,5 +620,44 @@ address {
   letter-spacing: 0.02em;
   color: #2e2f42;
   margin-bottom: 16px;
+}
+.modal-form {
+}
+.modal-form-window {
+  margin-bottom: 8px;
+}
+.modal-form-label {
+  font-size: 12px;
+  line-height: 1.17;
+  letter-spacing: 0.04em;
+  color: #8e8f99;
+  display: block;
+  margin-bottom: 4px;
+}
+.modal-form-label-window {
+  position: relative;
+}
+.modal-form-in {
+  width: 100%;
+  height: 40px;
+  border: 1px solid rgba(46, 47, 66, 0.4);
+  border-radius: 4px;
+  background-color: transparent;
+  padding-left: 38px;
+  outline: transparent;
+  transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+.modal-form-in:focus {
+  border-color: #4d5ae5;
+}
+.modal-form-label-icons {
+  position: absolute;
+  left: 16px;
+  top: 50%;
+  transform: translateY(-50%);
+  transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+.modal-form-in:focus .modal-form-label-icons {
+  fill: #4d5ae5;
 }
 /*! ============================================================ */
