--- a/css/styles.css
+++ b/css/styles.css
@@ -709,8 +709,8 @@ address {
 .modal-form-window-checkbox-icon {
 }
 .modal-form-window-checkbox-in:checked
-  + .modal-form-window-checkbox-box
-  > .modal-form-window-checkbox-icon {
+  + .modal-form-window-checkbox-text
+  > .modal-form-window-checkbox-box {
   background-color: #404bbf;
   border: none;
   fill: #f4f4fd;
@@ -735,5 +735,10 @@ address {
   transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
   border-radius: 4px;
   margin: 0 auto;
+}
+.modal-form-btn:hover,
+.modal-form-btn:focus {
+  background-color: #404bbf;
+  border: none;
 }
 /*! ============================================================ */
